[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qmbtools"
version = "0.1.0"
description = "Tools for quantum many-body simulation and plotting"
authors = [{name = "Your Name"}]
dependencies = ["numpy", "scipy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

